Fix for header on full page doc editor
Drat, missed this one. This fixes a layout issue on the full
page doc editor. Test included to confirm the breadcrumb
and API URL are always visible.

--- a/app/addons/documents/assets/less/doc-editor.less
+++ b/app/addons/documents/assets/less/doc-editor.less
@@ -55,7 +55,9 @@
 
   &#dashboard > header {
     z-index: 2;
-    .box-shadow(none);
+    > div {
+      .box-shadow(none);
+    }
   }
 
   #editor-container {
